--- a/style.css
+++ b/style.css
@@ -433,24 +433,40 @@ header p{
 
   #meta-bar {
     flex-direction: column;
-    /* align-items: flex-start; */
     align-items: center;
     gap: 0.5rem;
     font-size: 0.75rem;
     padding: 1rem;
   }
+
   #meta-stats span {
-    display: block; /* ✅ stack stats below time if too tight */
-    margin-left: 0; /* ⚠️ override desktop rule */
+    display: block; 
+    margin-left: 0; 
   }
 
-
-  #energy-section {
+/* make energy bar side by side on responsive */
+  /* #energy-section {
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
     margin: 1rem;
+  } */
+
+  #energy-section {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
   }
+
+  .energy-block {
+    flex: 1;
+    text-align: left;
+  }
+
+#status-block{
+  font-size: 12px;
+}
+
 
   #task-buttons button {
     font-size: 0.8rem;
@@ -463,7 +479,7 @@ header p{
 
   #normal-energy-value,
   #energy-value {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
 
