task button colour update

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ header p{
 
 #task-buttons button {
   background-color: #000;
-  color: #595959;
+  color: #b8b8b8;
   border: 1px solid #303030;
   padding: 0.75rem 1rem;
   font-family: 'IBM Plex Mono', monospace;
